--- a/Landing_page/style.css
+++ b/Landing_page/style.css
@@ -6,6 +6,7 @@ body{
     max-width: 100vh;
     font-family: Arial, Helvetica, sans-serif;
     width: 100vw;
+    overflow-x: hidden;
 }
 header{
     background-color: white;
@@ -136,15 +137,15 @@ a{
     height: 3080px;
 }
 
-.titulos-secao2{
+.titulos-secao{
+    font-size: 50px;
+}
+#primeiro-titulo{
     color: white;
     display: flex;
     margin-left: 900px;
-    font-size: 50px;
     position: relative;
-    margin-top: -500px;
-
-    
+    margin-top: -500px;   
 }
 .explicacao{
     color: white;
@@ -159,16 +160,17 @@ a{
     margin-top: 20px;
     margin-left: 100px;
 }
-hr{
+.divisao-secao2{
     margin-top: 350px;
     border: 2px solid #2B4689;
 }
 #segunda-linha{
     margin-top: -100px;
 }
-#segundo-texto{
-    margin-top: 175px;
+#segundo-titulo{
+    color: white;
     margin-left: 555px;
+    margin-top: 175px;
 }
 #segunda-imagem{
     margin-left: 770px;
@@ -209,11 +211,17 @@ hr{
     scale: 120%;
     bottom: 1200px;
 }
+/*Seção 3*/
 .secao3{
     background-color: #F8F9FF;
     margin-top: -100px;
     width: 1536px;
     height: 1000px;
+}
+#terceiro-titulo{
+    color: #0B1B54;
+    margin-top: 200px;
+    margin-left: 510px;
 }
 #beneficios{
     color: #0B1B54;
@@ -226,4 +234,76 @@ hr{
     margin-top: 100px;
     margin-left: 190px;
     scale: 100%;
+}
+table{
+    border-spacing: 50px;
+    margin-left: 60px;
+    margin-top: 50px;
+    color: #0B1B54;
+}
+.elemento-beneficios{
+    background-color: white;
+    border: 4px solid #FF7655;
+    width: 280px;
+    height: 400px;
+    border-radius: 10px;
+    text-align: center;
+    align-items: center;
+}
+.circulos{
+    width: 70px;
+    height: 70px;
+    padding: 17px;
+    align-items: center;
+    border-radius: 50%;
+    margin-left: 90px;
+    position: relative;
+    bottom: 38px;
+}
+#circulo-laranja{
+    background-color: #FFC9A7;
+    margin-top: 20px;
+}
+#circulo-azul-claro{
+    background-color: #DBE7FF;
+    margin-top: 20px;
+}
+#papel{
+    scale: 110%;
+    margin-top: 8px;
+    margin-left: 3px;
+}
+#circulo-cinza{
+    background-color: #E3ECF3;
+}
+#interface{
+    scale: 120%;
+    margin-top: 10px;
+}
+#circulo-azul{
+    background-color: #ABB8F2;
+    margin-top: 20px;
+}
+#prancheta{
+    margin-top: 5px;
+    margin-left: 5px;
+}
+.subtitulo-secao3{
+    font-size: 20px;
+}
+.texto-explicativo{
+    color: #818699;
+    padding: 10px;
+    font-weight: 400;
+}
+.segunda-divisao{
+    border: 2px solid #EBEEFF;
+    margin-top: 96px;
+}
+/*Seção 4*/
+.secao4{   
+    background-color: #F8F9FF;
+    margin-top: -100px;
+    width: 1536px;
+    height: 1000px;
 }
