--- a/Landing_page/style.css
+++ b/Landing_page/style.css
@@ -7,6 +7,7 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 100vw;
     overflow-x: hidden;
+    height: 6030px;
 }
 header{
     background-color: white;
@@ -14,7 +15,7 @@ header{
     margin-top:-15px;
     box-shadow: 0 2px 7px rgba(58, 84, 180, 0.1);
 }
-ul{
+.cabecalho{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -130,10 +131,11 @@ a{
     scale: 140%;
     margin-top: 50px;
 }
+/*Seção 2*/
 .secao2{
     background-color: #384994;
     margin-top: 15px;
-    width: 1536px;
+    width: 100vw;
     height: 3080px;
 }
 
@@ -211,11 +213,13 @@ a{
     scale: 120%;
     bottom: 1200px;
 }
+
 /*Seção 3*/
+
 .secao3{
     background-color: #F8F9FF;
     margin-top: -100px;
-    width: 1536px;
+    width: 100vw;
     height: 1000px;
 }
 #terceiro-titulo{
@@ -300,11 +304,13 @@ table{
     border: 2px solid #EBEEFF;
     margin-top: 96px;
 }
+
 /*Seção 4*/
+
 .secao4{   
     background-color: #F8F9FF;
     margin-top: -100px;
-    width: 1536px;
+    width: 100vw;
     height: 1000px;
 }
 #explicacao-secao4{
@@ -320,10 +326,10 @@ table{
     box-shadow: 0 6px 15px rgba(199, 206, 255, 0.36);
     width: 1325px;
     border-radius: 30px;
+    margin-left: 100px;
 }
 #quadro-colaboradores{
     height: 675px;
-    margin-left: 100px;
     margin-top: 100px;
 }
 #imagem-colaborador{
@@ -394,4 +400,176 @@ table{
 }
 #avancar{
     margin-left: 750px;
+}
+
+/* Seção 5*/
+
+.secao5{
+    width: 100vw;
+    height: 950px;
+}
+#quadro-ajuda{
+    height: 550px;
+}
+
+#quinto-titulo{
+    display: flex;
+    flex-wrap: nowrap;
+    padding: 20px;
+    margin-left: 550px;
+}
+#meios-contato{
+    font-size: 35px;
+    font-weight: bolder;
+    margin-left: 100px;
+    color: #0B1B54;
+    position: relative;
+    top: 50px;
+}
+#subtitulo-secao5{
+    color: #677196;
+    font-size: 25px;
+    margin-left: 20%;
+    position: relative;
+    bottom: 35px;
+
+}
+#botao-envio{
+    background-color: #FF7655;
+    scale: 140%;
+    color: #FFF;
+    position: relative;
+    left: 725px;
+    bottom: 485px;
+}
+#botao-envio:hover{
+    background-color: #D3422C;
+    color: #FFF;
+}
+label{
+    border-style: none;
+    border: 2 px solid #BFD4E3;
+}
+
+.dados-sinara{
+    color: #0B1B54;
+    font-size: 25px;
+}
+#numero-sinara{
+    margin-left: 160px;
+    position: relative;
+    bottom: 63px;
+}
+.contatos{
+    display: flex;
+    justify-content: space-between;
+}
+#telefone-icon{
+    margin-left: 100px;
+    position: relative;
+    margin-top: 100px;
+    scale: 120%;
+}
+#email-icon{
+    scale: 110%;
+    margin-left: 100px;
+    margin-top: 10px;
+    position: relative;
+    bottom: 45px;
+}
+#email-sinara{
+    margin-left: 165px;
+    position: relative;
+    bottom: 113px;
+}
+#insta-icon{
+    scale: 61.5%;
+    margin-left: 43px;
+    position: relative;
+    bottom: 50px;
+}
+#insta-sinara{
+    position: relative;
+    bottom: 182px;
+    left: 12%;
+}
+
+.campos{
+    border-style: none;
+    border: 3.5px solid #BFD4E3;
+    background-color: #FFF;
+    border-radius: 20px;
+    display: block;
+    box-sizing: border-box;
+    justify-content: space-around;
+    position: relative;
+    left: 700px;
+    color: #0B1B54;
+    text-align: left;
+    width: 500px;
+    font-size: 22px;  
+     
+}
+.campos::placeholder{
+    color: #0B1B54;
+    letter-spacing: 1.5px;
+    font-size: 22px;
+    text-indent: 0;
+    position: static;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#nome-campo{
+    padding-left: 115px;
+    height: 80px;
+    bottom: 475px;
+}
+#duvida-campo{
+    padding-top: 20px;
+    padding-bottom: 140px;
+    padding-left: 30px;
+    height: 150px;
+    bottom: 520px;
+    resize: vertical;
+    min-width: 150px;
+    max-height: 200px;
+    scrollbar-width: none;
+}
+#duvida-campo::-webkit-scrollbar{
+    display: none;
+}
+
+.campos:focus{
+    border-style: none;
+    border: 3.5px solid #BFD4E3;
+    outline:#BFD4E3;
+}
+#enviar{
+    color: #FFF;
+}
+#person-icon{
+    position: relative;
+    scale: 110%;
+    bottom: 98.5%;
+    left: 726px;
+}
+#linha-campo{
+    border: 1.8px solid #BFD4E3;
+    width: 43px;
+    transform: rotate(90deg);
+    position: relative;
+    bottom: 580px;
+    left: 130px;
+}
+.footer{
+    display: block;
+    background-color: #384994;
+    color: #FFF;
+    padding: 20px;
+    text-align: center;
+    font-size: 17px;
+    width: 100vw;
+    height: 70px;
+    position: relative;
+    top: 120px;
 }
