--- a/Área restirta/Login/style.css
+++ b/Área restirta/Login/style.css
@@ -1,5 +1,8 @@
 body{
     background-color: #0B1B54;
+    background-image: url(https://imgur.com/a/fzoxy7S);
+    background-size: cover;
+    background-position: center;    
 }
 label{
     border-style: none;
@@ -10,4 +13,7 @@ label{
     scale: 110%;
     bottom: 98.5%;
     left: 726px;
+}
+.login{
+    
 }
